# wsl-claude-commander

./: CLAUDE.md  README.md
apps/claude-talk/: .gitignore  CLAUDE.md  README.md  config.example.yaml  pyproject.toml
apps/claude-talk/docs/knowledge/: hotword-setup.md  wsl-audio.md
apps/claude-talk/scripts/: activate-window.ps1  get-windows.ps1  read_response.py  send-keys.ps1  set-clipboard.ps1  speak_response.py
apps/claude-talk/src/claude_talk/: __init__.py  __main__.py  cli.py  config.py  daemon.py
apps/claude-talk/src/claude_talk/audio/: __init__.py  capture.py  devices.py  playback.py
apps/claude-talk/src/claude_talk/claude/: __init__.py
apps/claude-talk/src/claude_talk/hotword/: __init__.py  porcupine.py
apps/claude-talk/src/claude_talk/stt/: __init__.py  base.py  openai_engine.py  vosk_engine.py
apps/claude-talk/src/claude_talk/tts/: __init__.py  base.py  edge_tts_engine.py
apps/claude-talk/src/claude_talk/utils/: __init__.py  logging.py  paths.py
apps/claude-talk/src/claude_talk/windows/: __init__.py  clipboard.py  input_sender.py  window_ops.py
apps/wsl-multi-launcher/: .gitignore  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  config.example.yaml  launch-windows.bat
apps/wsl-multi-launcher/docs/: README.md
apps/wsl-multi-launcher/docs/design/: README.md  window-tracking-strategy.md
apps/wsl-multi-launcher/docs/flows/: README.md  launch-flow.md
apps/wsl-multi-launcher/docs/guide/: README.md  build.md  configuration.md  setup.md
apps/wsl-multi-launcher/docs/knowledge/: README.md  window-handle-tracking.md
apps/wsl-multi-launcher/docs/references/: README.md
apps/wsl-multi-launcher/scripts/: get-displays.ps1  get-wt-windows.ps1  move-window.ps1
apps/wsl-multi-launcher/src/: config.rs  layout.rs  main.rs  windows.rs  wsl.rs
docs/: ARCHITECTURE.md  README.md
docs/_templates/: flow.md
docs/design/: README.md
docs/flows/: README.md
docs/guide/: README.md  documentation.md
docs/knowledge/: README.md  claude-code-hooks.md
docs/references/: README.md
docs/testing/: README.md
