[project]
name = "claude-talk"
version = "0.1.0"
description = "Voice interface for Claude Code - speak to Claude and hear responses"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ken" }]
keywords = ["claude", "voice", "speech", "tts", "stt"]

dependencies = [
    # CLI
    "click>=8.0",

    # Configuration
    "pyyaml>=6.0",
    "pydantic>=2.0",

    # Audio I/O
    "sounddevice>=0.4",
    # "webrtcvad>=2.0.10",  # Requires python3-dev, use silero-vad instead
    "numpy>=1.24",

    # STT (Free)
    "vosk>=0.3.45",

    # STT (Paid)
    "openai>=1.0",

    # TTS
    "edge-tts>=6.1",

    # Hotword (optional - use pvporcupine for Python 3.12+)
    # "openwakeword>=0.6",  # Not compatible with Python 3.12
    "pvporcupine>=3.0",

    # Logging
    "structlog>=24.0",

    # Utils
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
claude-talk = "claude_talk.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_talk"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
