[package]
name = "wsl-multi-launcher"
version = "0.1.0"
edition = "2024"
description = "Launch multiple WSL windows with grid layout on specified display"
authors = ["kenimo49"]
license = "MIT"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
